<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/total_bg">
  <!-- 上方导航 -->
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:background="@drawable/main_title_bg"
  	android:gravity="center_vertical"
  	
  >
	  <TextView
	  android:id="@+id/tvtitle"
	  android:text="@string/tosetpwdtext"
	  android:textColor="@color/black"
	  android:textSize="25dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:paddingLeft="5dp"
	  ></TextView>
	  <Button
	  	android:id="@+id/backbutton"
	  	android:background="@drawable/back"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_marginLeft="170dp"
	  	android:layout_marginTop="2dp"
	  ></Button>
  </LinearLayout>
 <LinearLayout
 	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="20dp"
 >
  	<LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:paddingTop="20dp"
 	 >
	  <ToggleButton
	  	android:id="@+id/toggle01"
	  	android:layout_width="100dp"
	  	android:layout_height="wrap_content"
	  	android:textOn="@string/canclepwd"
	  	android:textOff="@string/resetpwd"
	  	android:gravity="center_horizontal"
	  	android:paddingTop="2dp"
	  ></ToggleButton>
  </LinearLayout>
  	<LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  >
	  <TextView
	  android:text="@string/previouspwd"
	  android:textColor="@color/black"
	  android:textSize="20dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  ></TextView>
	  <EditText
	  android:id="@+id/previouspwd01"
	  android:password="true"
	  android:layout_width="150dp"
	  android:layout_height="wrap_content"
	  ></EditText>
  </LinearLayout>
  	<LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  >
	  <TextView
	  android:id="@+id/pwdtext01"
	  android:text="@string/pwd"
	  android:textColor="@color/black"
	  android:textSize="20dip"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  ></TextView>
	  <EditText
	  android:id="@+id/setpwd01"
	  android:password="true"
	  android:layout_width="150dp"
	  android:layout_height="wrap_content"
	  ></EditText>
  </LinearLayout>
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	
  >
	  <TextView
	  android:id="@+id/pwdtext02"
	  android:text="@string/repwd"
	  android:textColor="@color/black"
	  android:textSize="20dp"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  ></TextView>
	  <EditText
	  android:id="@+id/setpwd02"
	  android:password="true"
	  android:layout_width="150dp"
	  android:layout_height="wrap_content"
	  ></EditText>
  </LinearLayout>
  <Button
  	android:id="@+id/okbutton"
  	android:layout_width="240dp"
  	android:layout_height="wrap_content"
  	android:text="@string/okbuttontext"
  	android:textColor="@color/black"
	android:textSize="20dp"
  ></Button>
 </LinearLayout> 
</LinearLayout>

