<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="200dp"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingLeft="8dp">
  <LinearLayout
  	android:id="@+id/linearnew"
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  	  <ImageView
  	  	android:src="@drawable/filenew"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  ></ImageView>
	  <TextView
	  	android:id="@+id/newtv"
	  	android:text="@string/newd"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:textSize="18dp"
	  	android:layout_gravity="center_vertical"
	  	android:layout_marginLeft="5dp"
	  ></TextView>
  </LinearLayout>
  <LinearLayout
  	android:id="@+id/linearedit"
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  	  <ImageView
  	  	android:src="@drawable/edit"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  ></ImageView>
  	  <TextView
	  	android:id="@+id/edittv"
	  	android:text="@string/edit"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:textSize="18dp"
	  	android:layout_gravity="center_vertical"
	  	android:layout_marginLeft="5dp"
	  ></TextView>
  </LinearLayout>
  <LinearLayout
  	android:id="@+id/lineardelete"
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  	  <ImageView
  	  	android:src="@drawable/editdelete"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  ></ImageView>
  	  <TextView
	  	android:id="@+id/deletetv"
	  	android:text="@string/delete"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:textSize="18dp"
	  	android:layout_gravity="center_vertical"
	  	android:layout_marginLeft="5dp"
	  ></TextView>
  </LinearLayout>
  <LinearLayout
  	android:id="@+id/linearback"
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:paddingBottom="10dp"
  >
  	  <ImageView
  	  	android:src="@drawable/undo"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  ></ImageView>
  	  <TextView
	  	android:id="@+id/backtv"
	  	android:text="@string/back"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:textSize="18dp"
	  	android:layout_gravity="center_vertical"
	  	android:layout_marginLeft="5dp"
	  ></TextView>
  </LinearLayout> 
  
  
</LinearLayout>
