<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingLeft="10dip"
	android:paddingTop="10dip"
	android:paddingRight="10dip"
	android:paddingBottom="10dip"
	android:background="@drawable/total_bg">
	
	<LinearLayout
	  android:id="@+id/mainLayout"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical">
	  <!--新建日程  保存  取消 -->
	  <LinearLayout
	   android:id="@+id/saveandcancle"
	   android:layout_width="fill_parent"
	   android:layout_height="35dip"
	   android:orientation="horizontal"
	   >
	   <TextView
	    android:id="@+id/title"
	    android:layout_width="200dip"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="日程新建"
		android:textSize="25dip"
		android:textColor="@color/black"
		></TextView>
	   <ImageButton
		android:id="@+id/btsave"
		android:src="@drawable/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		
		/>
	   <ImageButton
		android:id="@+id/btcancle"
		android:src="@drawable/cancle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	   </LinearLayout>
	  <LinearLayout
	    android:id="@+id/layoutButton"
	    android:layout_width="wrap_content"
		android:layout_height="40dip"
		android:orientation="horizontal"
		android:gravity="top"
		>
	   <TextView
		android:layout_width="50dip"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="类型:"
		android:textSize="20dip"
		android:textColor="@color/black"
		></TextView>
	  <Spinner
		android:id="@+id/typespinner"
		android:layout_width="120dip"
		android:layout_height="wrap_content"
		></Spinner>
	   <ImageView
	    android:id="@+id/btstype"
	    android:paddingLeft="42dip"
	    android:src="@drawable/rcgl"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	   <ImageView
	     android:id="@+id/deletdtype"
	     android:src="@drawable/delete"
	     android:paddingLeft="7dip"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	   ></ImageView>
	</LinearLayout>   
	  <!-- 日期 闹钟  更多设置 -->
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	  <LinearLayout
	   android:id="@+id/datelinearlayout"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content">
	    <TextView
		android:layout_width="50dip"
		android:layout_height="wrap_content"
		android:textSize="20dip"
		android:text="日期:"
		android:textColor="@color/black"/>
	<TextView
		android:id="@+id/tvnewscheduleDate"
		android:layout_width="145dip"
		android:layout_height="wrap_content"
		android:textSize="20dip"
		android:text="2011/03/03"
		android:textColor="@color/black"/>
	
	<ImageView
	    android:id="@+id/dateimageview"
	    android:src="@drawable/rlsz"
	    android:paddingLeft="15dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	   
  </LinearLayout>
	
	<ImageView
	    android:id="@+id/alertimageview"
	    android:src="@drawable/alarm"
	    android:layout_width="50dip"
	    android:layout_height="wrap_content"
	    />
	   
	 
	</LinearLayout>
      <!-- 标题栏 -->
    <LinearLayout
      android:id="@+id/title"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="标题:"
        android:textSize="20dip"
        android:textColor="@color/black"/>
       <EditText
         android:id="@+id/newscheduletitleedit"
         android:layout_width="250dip"
         android:layout_height="wrap_content"
         android:singleLine="true"/>
       </LinearLayout>
       <!-- 设置联系人  地点   图片 -->
     <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" 
     >
     <TextView 
      android:id="@+id/contacttextview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20dip"
      android:textColor="@color/black"
      android:text="@string/contact"/>
     <TextView 
      android:id="@+id/contacttextview01"
      android:background="@drawable/background"
      android:layout_width="80dip"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:textSize="20dip"
      />
      <TextView 
      android:id="@+id/locationtextview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20dip"
      android:textColor="@color/black"
      android:text="@string/location"
      />
      <TextView 
      android:id="@+id/locationtextview01"
      android:background="@drawable/background"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:textSize="20dip"
      />
      <ImageView 
      android:id="@+id/ImageViewmap01"
      android:layout_width="wrap_content"
      android:layout_height="25dip"
      android:layout_marginLeft="5dip"
      />      
     </LinearLayout>
     <!-- 内容  附件栏 -->
     <LinearLayout
      android:id="@+id/fujianlayout"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
     <TextView
      android:layout_width="210dip"
      android:layout_height="wrap_content"
      android:text="内容:"
      android:textSize="20dip"
      android:textColor="@color/black"/>
     <Button 
       android:id="@+id/playsound"
       android:background="@drawable/playbutton1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      
       />
     <ImageView
      android:id="@+id/fujianimageview"      
      android:src="@drawable/fujianimage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"      
      />
      </LinearLayout>
      <!-- 详细内容的显示 -->
      
     <ScrollView
   android:id="@+id/scrollview"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:scrollbars="vertical"
   android:scrollbarSize="5dip"  
  >
  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <TextView
      android:id="@+id/showalarm"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="15dip"
      android:textColor="@color/green"/>
      <!-- android:gravity="top"  将光标放在首位 -->
   <EditText
    android:gravity="top"
    android:id="@+id/etxjrcNote"
    android:hint="@string/ceshi"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="17dip"
	android:lines="9"
	
	android:singleLine="false"/>
     <ImageView
     android:id="@+id/showphoto"
     android:layout_width="100dip"
     android:layout_height="100dip"
     ></ImageView>

    </LinearLayout>
</ScrollView> 
</LinearLayout>
</FrameLayout>
